Fixed menu margin and z-index #22776551004560

--- a/css/partials/_organisms.scss
+++ b/css/partials/_organisms.scss
@@ -424,7 +424,6 @@
 		float: none;
 		height: 100%;
 		max-height: 100%;
-		margin-top: 120px;
 		right: 0;
 		padding: 10px 15px 0;
 		position: absolute;
@@ -637,7 +636,7 @@
 	position: relative;
 	text-align: center;
 	width: 100%;
-	z-index: 10;
+	z-index: 50;
 
 	> span {
 		display: inline-block;
@@ -1042,7 +1041,7 @@
 	height: 200px !important;
 	overflow: hidden !important;
 	position: relative;
-	z-index: 999;
+	z-index: 20;
 
 	> * {
 		@include no-selection;
